# pdf-to-skill-workflow

./: .gitignore  CLAUDE.md  SKILL.md  pdf_extract.py  pyproject.toml  requirements.txt
examples/: api-index.json  tc1000-skill.md  te1000-skill.md
pdf_to_skill/: __init__.py  __main__.py  cli.py  config.py  converter.py  db.py  dependencies.py  extractor.py  indexer.py  models.py  searcher.py
pdf_to_skill/prompts/: __init__.py  api_doc.md  database.md  framework.md  general.md  internal.md  protocol.md
